# codetheorie

./: Cargo.toml
input/: adfgvx.txt  adfgvx_test.txt  freq.txt  jaccuse.txt  random.txt  vigenere_column.txt
src/: adfgvx.rs  columnar_transposition.rs  frequency_analysis.rs  main.rs  util.rs  vigenere.rs
